# Python-Useful-Scripts

./: CLAUDE.md  README.md  md_to_odt.py  md_to_pdf.py  pyproject.toml
.claude/: settings.local.json
doc/: md_repair.md  md_to_odt.md  md_to_pdf.md  odt_to_md.md  pdf_to_md.md
src/: md_repair.py  odt_to_md.py  pdf_to_md.py
